--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
    "main": "index.js",
    "scripts": {
       "start": "nodemon index.js",
+      "dev": "SET NODE_ENV=development nodemon index.js",
       "test": "echo \"Error: no test specified\" && exit 1"
    },
    "keywords": [],
    "author": "Le_Khoi",
    "license": "ISC",
    "dependencies": {
+      "dotenv": "^16.0.3",
       "ejs": "^3.1.9",
       "express": "^4.18.2",
       "nodemon": "^2.0.21",
