--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
    "description": "",
    "main": "index.js",
    "scripts": {
-      "start": "nodemon index.js",
-      "dev": "SET NODE_ENV=development nodemon index.js",
+      "start": "node index.js",
+      "dev": "SET NODE_ENV=development&& nodemon index.js",
       "test": "echo \"Error: no test specified\" && exit 1"
    },
    "keywords": [],
