--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
       "express": "^4.18.2",
       "nodemon": "^2.0.21",
       "peer": "^1.0.0",
+      "peerjs": "^1.4.7",
       "pug": "^3.0.2",
       "socket.io": "^4.6.1",
       "uuid": "^9.0.0"
