change form method, add guide comment, id generate

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
       "peer": "^1.0.0",
       "peerjs": "^1.4.7",
       "pug": "^3.0.2",
+      "short-unique-id": "^4.4.4",
       "socket.io": "^4.6.1",
       "uuid": "^9.0.0"
    }
